--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.0'
     compile 'com.github.iwgang:familiarrecyclerview:1.3.0'
     compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.squareup.picasso:picasso:2.3.3'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
