--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.github.franmontiel:PersistentCookieJar:v1.0.0'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
 }
